Fix crop canvas controls on firefox

--- a/src/css/night/controls/_crop_canvas.sass
+++ b/src/css/night/controls/_crop_canvas.sass
@@ -28,6 +28,7 @@
       background: rgba(34, 34, 34, 0.9)
 
   .imglykit-canvas-crop-center-center
+    position: relative
     background: transparent
     cursor: move
     border: 1px solid white
@@ -36,7 +37,9 @@
       cursor: auto
 
   .imglykit-canvas-crop-knobs
-    position: relative
+    position: absolute
+    top: 0
+    left: 0
     width: 100%
     height: 100%
     > *
